[gd_scene load_steps=32 format=3 uid="uid://deeyw2hrbotgb"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_84wai"]
[ext_resource type="PackedScene" uid="uid://cml40s7uhfwfg" path="res://Scenes/space_rect.tscn" id="2_bjx7e"]
[ext_resource type="PackedScene" uid="uid://tge3qwkhqpy2" path="res://Scenes/map_planet.tscn" id="3_6twq7"]
[ext_resource type="Texture2D" uid="uid://cppni35qvv7k2" path="res://Sprites/Placeholder/PlaceholderHideNormalClosed.png" id="4_g1cr4"]
[ext_resource type="Resource" uid="uid://cbftq03u2wxje" path="res://Planets/Mercury.tres" id="4_tt4sn"]
[ext_resource type="Resource" uid="uid://dvg2mr6dd04mo" path="res://Planets/Venus.tres" id="5_2muob"]
[ext_resource type="Texture2D" uid="uid://dnp8gounvnxgl" path="res://Sprites/Placeholder/PlaceholderHideHoverClosed.png" id="5_kigbf"]
[ext_resource type="Resource" uid="uid://b0di0xmpn7lhh" path="res://Planets/Earth.tres" id="6_8osvy"]
[ext_resource type="PackedScene" path="res://Scenes/lift_manager.tscn" id="7_61jxl"]
[ext_resource type="Resource" uid="uid://bggsrxb7tq0qp" path="res://Planets/Mars.tres" id="7_80nfk"]
[ext_resource type="Resource" uid="uid://dhirbl62gx8up" path="res://Planets/Jupiter.tres" id="8_4to8t"]
[ext_resource type="Resource" uid="uid://d3mhqrpgltaje" path="res://Planets/Saturn.tres" id="9_mhqpv"]
[ext_resource type="Resource" uid="uid://b34visnkpwsds" path="res://Planets/Uranus.tres" id="10_j3eve"]
[ext_resource type="Resource" uid="uid://bba1sgnnn784y" path="res://Planets/Neptune.tres" id="11_1aypn"]
[ext_resource type="Script" path="res://Scripts/asteroid_field_populator.gd" id="12_sa5np"]
[ext_resource type="Resource" uid="uid://d2jw3lpyvsj4l" path="res://Planets/FieldAsteroid.tres" id="13_w7yol"]
[ext_resource type="Texture2D" uid="uid://det7mcsy3w32a" path="res://Sprites/Placeholder/PlaceholderTitle.png" id="14_x72yw"]
[ext_resource type="Texture2D" uid="uid://b23fqf5lsyypu" path="res://Sprites/Placeholder/PlaceholderHideNormalOpen.png" id="16_t0b0n"]
[ext_resource type="Texture2D" uid="uid://ctordmf4nl60c" path="res://Sprites/Placeholder/PlaceholderHidePressed.png" id="17_uywws"]
[ext_resource type="Texture2D" uid="uid://cu24f8ou5r6u7" path="res://Sprites/Placeholder/PlaceholderHideHoverOpen.png" id="18_xpuh5"]
[ext_resource type="Texture2D" uid="uid://dxe050to3mxq3" path="res://Sprites/Placeholder/PlaceholderHideFocus.png" id="19_gdf8v"]
[ext_resource type="Texture2D" uid="uid://di0hwlpehecht" path="res://Sprites/Placeholder/PlaceholderFastNormalT.png" id="20_hyr5r"]
[ext_resource type="Script" path="res://Scripts/bobbing_component.gd" id="21_b6cxi"]
[ext_resource type="Texture2D" uid="uid://cxl00uwpxf5lk" path="res://Sprites/Buttons/next-button-normal.png" id="21_h3piy"]
[ext_resource type="Texture2D" uid="uid://bsb7i8ptbauey" path="res://Sprites/Placeholder/PlaceholderFastPressedT.png" id="21_q2dyf"]
[ext_resource type="Texture2D" uid="uid://csr1fh2040rx8" path="res://Sprites/Buttons/next-button-pressed.png" id="22_0tgtd"]
[ext_resource type="Texture2D" uid="uid://bd8xeqfds3f87" path="res://Sprites/Placeholder/PlaceholderFastHoverT.png" id="22_ct0so"]
[ext_resource type="Texture2D" uid="uid://do4vg2akobmg" path="res://Sprites/Buttons/next-button-hover.png" id="23_a61k0"]
[ext_resource type="Texture2D" uid="uid://cg83510xfr8rc" path="res://Sprites/Buttons/next-button-disabled.png" id="24_y25lf"]
[ext_resource type="Texture2D" uid="uid://cytj5g82vm2u6" path="res://Sprites/Buttons/next-button-focus-light.png" id="25_ncawk"]
[ext_resource type="PackedScene" path="res://Scenes/hover_fade_component.tscn" id="25_tnpjw"]

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("planet_lifter", "menu_lifter")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84wai")
hide_normal_open = ExtResource("16_t0b0n")
hide_hover_open = ExtResource("18_xpuh5")
hide_normal_closed = ExtResource("4_g1cr4")
hide_hover_closed = ExtResource("5_kigbf")
planet_lifter = NodePath("PlanetLifter")
menu_lifter = NodePath("MenuLifter")

[node name="SpaceRect" parent="." instance=ExtResource("2_bjx7e")]
z_index = -2
layout_mode = 0
offset_right = 500.0
offset_bottom = 500.0

[node name="PlanetLifter" parent="." node_paths=PackedStringArray("targets") instance=ExtResource("7_61jxl")]
targets = [NodePath("../Planets")]

[node name="MenuLifter" parent="." node_paths=PackedStringArray("targets") instance=ExtResource("7_61jxl")]
targets = [NodePath("../Title"), NodePath("../MenuBox")]
lift_height = 300.0

[node name="Planets" type="Node2D" parent="."]
z_index = -2

[node name="Sun" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Mercury" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("4_tt4sn")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Venus" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("5_2muob")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Earth" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("6_8osvy")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Mars" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("7_80nfk")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Jupiter" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("8_4to8t")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Saturn" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("9_mhqpv")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Uranus" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("10_j3eve")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="Neptune" parent="Planets" instance=ExtResource("3_6twq7")]
position = Vector2(280, 348)
represented_planet = ExtResource("11_1aypn")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)
should_randomise_position = true
should_randomise_rotation = true

[node name="AsteroidFieldPopulator" type="Node2D" parent="Planets"]
position = Vector2(163, 300)
script = ExtResource("12_sa5np")
num_asteroids = 30
asteroid_info = ExtResource("13_w7yol")
map_offset = Vector2(0, 90)
map_scale = Vector2(2.5, 2.5)

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -13.0
offset_right = 500.0
offset_bottom = 187.0
texture = ExtResource("14_x72yw")
stretch_mode = 3

[node name="BobbingComponent" type="Node" parent="Title"]
script = ExtResource("21_b6cxi")

[node name="MenuBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -41.0
offset_right = 166.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="TextureButton" parent="MenuBox"]
layout_mode = 2
texture_normal = ExtResource("21_h3piy")
texture_pressed = ExtResource("22_0tgtd")
texture_hover = ExtResource("23_a61k0")
texture_disabled = ExtResource("24_y25lf")
texture_focused = ExtResource("25_ncawk")

[node name="BobbingComponent" type="Node" parent="MenuBox/PlayButton"]
script = ExtResource("21_b6cxi")
bobbing_height = 4.0
bob_offset = -0.7854

[node name="PlayButton2" type="TextureButton" parent="MenuBox"]
layout_mode = 2
texture_normal = ExtResource("21_h3piy")
texture_pressed = ExtResource("22_0tgtd")
texture_hover = ExtResource("23_a61k0")
texture_disabled = ExtResource("24_y25lf")
texture_focused = ExtResource("25_ncawk")

[node name="BobbingComponent" type="Node" parent="MenuBox/PlayButton2"]
script = ExtResource("21_b6cxi")
bobbing_height = 4.0
bob_offset = -1.5708

[node name="PlayButton3" type="TextureButton" parent="MenuBox"]
layout_mode = 2
texture_normal = ExtResource("21_h3piy")
texture_pressed = ExtResource("22_0tgtd")
texture_hover = ExtResource("23_a61k0")
texture_disabled = ExtResource("24_y25lf")
texture_focused = ExtResource("25_ncawk")

[node name="BobbingComponent" type="Node" parent="MenuBox/PlayButton3"]
script = ExtResource("21_b6cxi")
bobbing_height = 4.0
bob_offset = -2.3562

[node name="ControlBox" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -38.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0

[node name="SlowButton" type="TextureButton" parent="ControlBox"]
layout_mode = 2
texture_normal = ExtResource("20_hyr5r")
texture_pressed = ExtResource("21_q2dyf")
texture_hover = ExtResource("22_ct0so")
texture_disabled = ExtResource("21_q2dyf")
texture_focused = ExtResource("19_gdf8v")
flip_h = true

[node name="HoverFadeComponent" parent="ControlBox/SlowButton" instance=ExtResource("25_tnpjw")]
layout_mode = 1

[node name="FastButton" type="TextureButton" parent="ControlBox"]
layout_mode = 2
texture_normal = ExtResource("20_hyr5r")
texture_pressed = ExtResource("21_q2dyf")
texture_hover = ExtResource("22_ct0so")
texture_disabled = ExtResource("21_q2dyf")
texture_focused = ExtResource("19_gdf8v")

[node name="HoverFadeComponent" parent="ControlBox/FastButton" instance=ExtResource("25_tnpjw")]
layout_mode = 1

[node name="HideButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -38.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("16_t0b0n")
texture_pressed = ExtResource("17_uywws")
texture_hover = ExtResource("18_xpuh5")
texture_disabled = ExtResource("17_uywws")
texture_focused = ExtResource("19_gdf8v")

[node name="HoverFadeComponent" parent="HideButton" instance=ExtResource("25_tnpjw")]
layout_mode = 1
active = false

[connection signal="focus_entered" from="ControlBox/SlowButton" to="ControlBox/SlowButton/HoverFadeComponent" method="trigger_hover"]
[connection signal="pressed" from="ControlBox/SlowButton" to="." method="_on_slow_button_pressed"]
[connection signal="pressed" from="ControlBox/SlowButton" to="ControlBox/SlowButton/HoverFadeComponent" method="trigger_hover"]
[connection signal="focus_entered" from="ControlBox/FastButton" to="ControlBox/FastButton/HoverFadeComponent" method="trigger_hover"]
[connection signal="pressed" from="ControlBox/FastButton" to="." method="_on_fast_button_pressed"]
[connection signal="pressed" from="ControlBox/FastButton" to="ControlBox/FastButton/HoverFadeComponent" method="trigger_hover"]
[connection signal="focus_entered" from="HideButton" to="HideButton/HoverFadeComponent" method="trigger_hover"]
[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="HideButton" to="HideButton/HoverFadeComponent" method="trigger_hover"]
